assets/css/style.css
*{
  font-family: 'Merriweather', Helvetica, sans-serif;
}
.button {
  background-color: #222222;
  color: #fff;
  border-radius: 4px;
  padding: 10px 20px;
  font-size: 16px;
  border: none;
}

.button:hover {
  background-color: darkred;
  cursor: pointer;
  color: #fff;
}

#input-date{
  color: #222222;
}

#submit{
 background-color: rgba(136, 67, 3, 0.808);
}

#submit:hover{
  background-color: darkorange;
}

.hero {
  background-position-y: center;
  background-size: cover;
  background-image: url('https://media.discordapp.net/attachments/1026278051627139114/1091161273158348820/image.png?width=1202&height=676');
}

.container {
  justify-content: center;
}

.navbar-item {
  padding-top: 70px;
  font-size: 75px;
  color: #fff;
}

.subtitle {
  margin: 0 20% 0 20%;
  font-size: 16px;
  line-height: 1.8;
}

body {
  background-color: #222222;
}

.centerButton {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  padding-top: 50px;
}

.centerSubmit {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
}

#main-description {
  text-align: left;
  background-color: rgba(0, 0, 0, 0.349) ;
  padding: 10px 20px 10px 20px;
}

#get-started {
  background-color: rgba(136, 67, 3, 0.808);
  border: 1px solid #222222;
}
#get-started:hover{
  background-color: darkorange;
}
#controls{
  margin: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
#prev{
  background-color: rgba(136, 67, 3, 0.808);
  position: absolute;
  left: 20px;
  top: 50%;
}
#prev:hover{
  background-color: darkorange;
}
#next{
  background-color: rgba(136, 67, 3, 0.808);
  position: absolute;
  right: 20px;
  top: 50%;
}
#next:hover{
  background-color: darkorange;
}
.field {
  display: flex;
  flex-direction: column;
}

.label {
  text-align: left;
}

#sendMessagebtn {
  background-color: rgba(136, 67, 3, 0.808);
  border: 1px solid #222222;
}

#centerAlignBtn {
  text-align: center;
}

#commentSec {
  margin-left: 15px;
  padding-bottom: 10px;
  display: flex;
  flex-direction: column;
  width: 20%;
}

.section:not(:last-child) {
  margin-bottom: 4rem;
}

.footer {
  background-color: black;
  color: white; /* To change the text color to white */
}


#img_counter {
  text-align: center;
}

